--- a/app/src/main/res/layout/repo_name.xml
+++ b/app/src/main/res/layout/repo_name.xml
@@ -9,6 +9,6 @@
         android:text="@string/text"
         android:id="@+id/name_of_repo"
         android:layout_margin="20dp"
-        android:textSize="20dp"/>
+        android:textSize="20sp"/>
 
 </LinearLayout>
